[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "yapydss"
version = "0.1.0"
authors = [
  { name="James Gilbert", email="james.gilbert@ucsc.edu" },
]
description = "Yet another Python wrapper of HECLIB DSS library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/james-m-gilbert/yapydss"
Issues = "https://github.com/james-m-gilbert/yapydss/issues"

#[tool.setuptools.packages.find]
#where = ["src"]

[tool.setuptools.package-data]
'*' = ["*.dll"]
